--- a/package.xml
+++ b/package.xml
@@ -6,26 +6,26 @@
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
+  <!-- <maintainer email="fujita-masamichi@hiroshima-u.ac.jp">Masamichi Fujita</maintainer> -->
+  <maintainer email="fujita-masamichi@hiroshima-u.ac.jp">Masamichi Fujita</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>BSD</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/pimouse_ros</url> -->
+  <!-- <url type="website">https://github.com/ryuichiueda/raspimouse_book_info</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
   <!-- Authors do not have to be maintainers, but could be -->
   <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+  <!-- <author email="fujita-masamichi@hiroshima-u.ac.jp">Masamichi Fujita</author> -->
 
 
   <!-- The *depend tags are used to specify dependencies -->
